# shypn

./: .gitignore  .pre-commit-config.yaml  ANALYSES_SOURCE_SINK_COMPLETE.md  ANALYSIS_RESET_CLEAR_FIXES.md  ARC_EDITING_CURRENT_STATE.md  ARC_IMPLEMENTATION_PHASE1_COMPLETE.md  ARC_INTERACTIVE_TESTING_COMPLETE.md  ARC_PHASE2A_PARALLEL_AND_TRANSFORM.md  ARC_REFINEMENTS_COMPLETE.md  ARC_REFINEMENTS_PLAN.md  ARC_TRANSFORMATION_COMPLETE_FIX.md  ARC_TRANSFORMATION_COMPLETE_VERIFICATION.md  ARC_TRANSFORMATION_DEBUG_GUIDE.md  ARC_TRANSFORMATION_FIX.md  AUTO_TRACKING_FIX.md  BIOMD61_ANALYSIS_REPORT.md  BIOMD61_SIMULATION_FIX.md  BIOMODELS_FETCH_FIX.md  BUGFIX_STOCHASTIC_LEFTOVER_TOKENS.md  BUGFIX_TRANSITION_TYPE_DISPLAY_IN_ANALYSIS_PANEL.md  BUGFIX_WINDOW_CROSSING.md  CAIRO_FIX_FINAL.md  CANVAS_CONTROLS.md  CHANGES_MODELS_REPORT.md  CLEANUP_REPORT_20251108.md  CONTEXT_MENU_ADD_TO_ANALYSIS_FIX.md  CONTEXT_MENU_WIRING_FIX.md  CONTINUOUS_PLOTTING_DEBUG_GUIDE.md  CONTINUOUS_PLOTTING_INVESTIGATION_SUMMARY.md  CONTRIBUTING.md  CRITICAL_BUGFIX_SUMMARY.md  CROSSFETCH_ARCHITECTURE_CLARIFICATION.md  CROSSFETCH_INTEGRATION_COMPLETE.md  CURVED_ARC_HANDLE_FIX.md  CURVED_ARC_TRANSFORMATION_FIX.md  CURVED_ARC_WEIGHT_LABEL_FIX.md  CURVED_ARC_WEIGHT_LABEL_SUMMARY.md  DAILY_SUMMARY_2025_10_06.md  DEFAULT_FILENAME_NORMALIZATION.md  DIRECTORY_STRUCTURE_ANALYSIS.md  (+303 more)
archive/: README.md  analyze_screenshot_model.py  deep_investigate_arcs.py  diagnose_spurious_lines.py  inspect_gui_arcs.py  inspect_saved_file.py  intercept_arc_rendering.py  lookup_compounds.py
data/: README.md  user_model.py
dev/: README_WAYLAND_TESTS.md  debug_simulation_init.py  file_explorer_window.ui  simple_window.ui  test_architecture_principle.py  test_brenda_clear_results.py  test_brenda_connection.py  test_brenda_database_integration.py  test_brenda_debug.py  test_brenda_detailed.py  test_brenda_duplicate_prevention.py  test_brenda_network.py  test_brenda_official.py  test_brenda_query_format.py  test_brenda_transition_clearing.py  test_category_collapse.py  test_clear_selection_colors.md  test_error71_diagnosis.py  test_file_panel_manual.py  test_file_panel_v2.py  test_file_panel_wayland.py  test_gtkstack_principle.py  test_km_query.py  test_master_palette_file_panel.py  test_pathway_panel_wayland.py  test_pathway_stack_mode.py  test_pathway_ui_elements.py  test_simple_window.py  test_swap_file_panel.py  validate_heuristic_fixes.py
doc/: ALL_ARC_TYPES_TRANSFORMATION_VERIFIED.md  ANALYSES_COMPLETE_FIX_SUMMARY.md  ANALYSES_LOCALITY_AND_RESET_FIXES.md  ANALYSES_LOCALITY_UI_LIST_FIX.md  (+649 more)
(+1453 files in other folders)
