[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shypn"
version = "2.0.0"
description = "Petri Net editor with Black Hole Galaxy Physics engine for beautiful hierarchical layouts"
authors = [
    { name="Simão Eugénio", email="simao-eugenio@github.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["shypn*", "shypn.api*"]
